--- a/google/dbt_project.yml
+++ b/google/dbt_project.yml
@@ -42,3 +42,9 @@ tests:
     +severity: warn
     marts:
       +severity: error
+
+seeds:
+  google:
+    +persist_docs:
+      relation: true
+      columns: true
